2014-09-11  Jason Merrill  <jason@redhat.com>

	PR c++/63201
	* decl.c (start_decl): Handle specialization of member variable
	template.
	* pt.c (check_explicit_specialization): Adjust error.

2014-09-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/61489
	* typeck2.c (process_init_constructor_record): Do not warn about
	missing field initializer if EMPTY_CONSTRUCTOR_P (init).

2014-09-11  Jason Merrill  <jason@redhat.com>

	PR c++/63139
	* pt.c (tsubst_pack_expansion): Simplify substitution into T....
	(tsubst): Don't throw away PACK_EXPANSION_EXTRA_ARGS.

2014-09-10  Jason Merrill  <jason@redhat.com>

	PR c++/61659
	* decl.c (grokfndecl): Don't set DECL_COMDAT on static inlines.
	(duplicate_decls, start_decl): Likewise.
	* pt.c (check_explicit_specialization): Likewise.
	(push_template_decl_real): Or static templates.

2014-09-08  Jason Merrill  <jason@redhat.com>

	* typeck.c (build_class_member_access_expr): Move
	-Winvalid-offsetof code...
	* semantics.c (finish_offsetof): ...here.
	* parser.c (cp_parser_builtin_offsetof): Remember the location of
	the type argument.
	* pt.c (tsubst_copy_and_build) [OFFSETOF_EXPR]: Preserve it.

	PR c++/62255
	* pt.c (instantiate_decl): Handle recursive instantiation of
	static data member.

2014-09-05  Jason Merrill  <jason@redhat.com>

	PR c++/62659
	* semantics.c (potential_constant_expression_1): Handle un-folded
	pointer to member constants.

2014-09-04  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR ipa/61659
	* decl.c (duplicate_decls): Check DECL_DECLARED_INLINE_P on
	newdecl, not olddecl.

2014-09-02  Paolo Carlini  <paolo.carlini@oracle.com>

	DR 1453
	* class.c (check_field_decls): A class of literal type cannot have
	volatile non-static data members and base classes.
	(explain_non_literal_class): Update.

2014-09-02  Jakub Jelinek  <jakub@redhat.com>
	    Balaji V. Iyer  <balaji.v.iyer@intel.com>
	    Igor Zamyatin  <igor.zamyatin@intel.com>
